# web_crawler_with_ai

./: .gitignore  README.md  pyproject.toml
info_segugio/: __init__.py  config.py  prompts.py
public/: app.css  theme.json
