[project]
name = "info-segugio"
version = "0.1.0"
description = ""
authors = [
    {name = "amit",email = "pandheramit245@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0.0, >=3.13"
dependencies = [
    "chainlit (>=2.1.0,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "openai (>=1.60.2,<2.0.0)",
    "tavily-python (>=0.5.0,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
